--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Grechen+Fuemen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 body{
-    background-color: #fff;
-    color: #000;
+    background-color: #dfdfdf;
+    color: #202020;
     font-family: 'Open Sans Condensed', cursive;
     transition: .3s;
 }
 body.dark-theme{
-    background-color: #000;
-    color: #FFF;
+    background-color: #202020;
+    color: #dfdfdf;
     font-family: 'Open Sans Condensed', cursive;
     transition: .3s;
 }
+
 
 
 body nav{
@@ -20,7 +21,7 @@ body nav{
     display: flex;
 	flex-wrap:wrap;
 	justify-content:space-between;
-    color: #FFF;
+    color: #dfdfdf;
 }
 body.dark-theme nav{
     margin-top: 30px;
@@ -28,19 +29,213 @@ body.dark-theme nav{
     display: flex;
 	flex-wrap:wrap;
 	justify-content:space-between;
-    color: #000;
+    color: #202020;
 }
 
 nav .titre{
     display: flex;
 }
+
+nav .titre img{
+    width: 120px;
+    height: 120px;
+    margin-right: 20px;
+}
+
+body nav .titre h1{
+    font-size: 50px;
+    margin-top: 30px;
+	color: #202020;
+	transition: .6s;
+    font-family: 'Grechen Fuemen', cursive;
+}
+body.dark-theme nav .titre h1{
+    font-size: 50px;
+    margin-top: 30px;
+	color: #dfdfdf;
+	transition: .6s;
+    font-family: 'Grechen Fuemen', cursive;
+}
+
+body nav .titre h1:hover{
+	text-decoration: underline;
+    font-size: 55px;
+    margin-top: 30px;
+  	color: #f69046;
+}
+body.dark-theme nav .titre h1:hover{
+	text-decoration: underline;
+    font-size: 55px;
+    margin-top: 30px;
+  	color: #f69046;
+}
+
+nav .onglets{
+    margin-right: 20px;
+    margin-top: 30px;
+}
+
+body nav .onglets a{
+  	text-decoration: none;
+  	color: #202020;
+  	margin-right: 10px;
+	font-size: 25px;
+  	transition: .3s;
+}
+body.dark-theme nav .onglets a{
+    text-decoration: none;
+    color: #dfdfdf;
+    margin-right: 10px;
+  font-size: 25px;
+    transition: .3s;
+}
+
+body nav .onglets  a:hover{
+	color: #fcd300;
+	font-size: 30px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+body.dark-theme nav .onglets  a:hover{
+	color: #fcd300;
+	font-size: 30px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+
+body nav .onglets .actual{
+  	text-decoration: none;
+  	color: #fcd300;
+	font-size: 25px;
+    margin-right: 10px;
+  	transition: .3s;
+}
+body.dark-theme nav .onglets .actual{
+  	text-decoration: none;
+  	color: #fcd300;
+	font-size: 25px;
+    margin-right: 10px;
+  	transition: .3s;
+}
+
+body nav .onglets .actual:hover{
+	color: #202020;
+	font-size: 30px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+body.dark-theme nav .onglets .actual:hover{
+	color: #dfdfdf;
+	font-size: 30px;
+    margin-top: 20px;
+    text-decoration: underline;
+}
+
+
+
+.titleArticles{
+    text-decoration: underline;
+    font-size: 20px;
+}
+
+
+
+.articles{
+	margin-top: 30px;
+}
+
+body .articles .article{
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 30px;
+    margin-left: 12.5%;
+    width: 75%;
+    height: 300px;
+    border-top: 1px solid rgb(129,129,129);
+    border-left: 1px solid rgb(129,129,129);
+    background: rgba(32, 32, 32, 0.3);
+    backdrop-filter: blur(20px);
+    border-radius: 10px;
+}
+body.dark-theme .articles .article{
+	display: flex;
+	flex-wrap: wrap;
+	margin-bottom: 30px;
+    margin-left: 12.5%;
+    width: 75%;
+    height: 300px;
+    border-top: 1px solid rgb(129, 129, 129);
+    border-left: 1px solid rgb(129, 129, 129);
+    background: rgba(223, 223, 223, 0.3);
+    backdrop-filter: blur(20px);
+    border-radius: 10px;
+}
+
+.articles .article .left img{
+    margin-top: 25px;
+    margin-left: 25px;
+	height: 250px;
+	width: 250px;
+}
+
+.articles .article .right{
+	max-width: 50%;
+	margin-left: 40px;
+}
+
+body .articles .article .right a{
+  color: #dfdfdf;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 25px;
+  transition: .3s;
+}
+body .articles .article .right a{
+    color: #202020;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 25px;
+    transition: .3s;
+  }y
+
+body .articles .article .right a:hover{
+    color: #ebaf4c;
+    text-decoration: underline;
+}
+body.dark-mode .articles .article .right a:hover{
+    color: #ebaf4c;
+    text-decoration: underline;
+}
+
+body .articles .article .right p.date{
+	color: #d50000;
+}
+body.dark-mode .articles .article .right p.date{
+	color: #d50000;
+}
+
+body .articles .article .right p.description{
+	color: #dfdfdf;
+}
+body.dark-mode .articles .article .right p.description{
+	color: #202020;
+}
+
+body footer hr{
+    width: 45%;
+}
+body.dark-mode footer hr{
+    width: 45%;
+}
+
+
+
 .toggle{
     margin-top: 30px;
 }
 .toggle input[type='checkbox'] {
     display: none;
 }
-
 .toggle label {
     background-color: #777;
     border: 2px solid #555;
@@ -66,123 +261,24 @@ nav .titre{
     height: 42px;
 }
 .toggle input[type='checkbox']:checked ~ label {
-    background-color: #00a0fc;
-    border-color: #006dc9;
+    background-color: #dbe5f1;
+    border-color: #a5c0ea;
 }
 
 .toggle input[type='checkbox']:checked ~ label::after {
-    background-color: #0054b0;
+    background-color: #a5c0ea;
     transform: translateX(50px);
 }
 
-nav .titre img{
-    width: 120px;
-    height: 120px;
-    margin-right: 20px;
-}
-nav .titre h1{
-    font-size: 50px;
-    margin-top: 30px;
-	color: #FFF;
-	transition: .6s;
-    font-family: 'Grechen Fuemen', cursive;
-}
-nav .titre h1:hover{
-	text-decoration: underline;
-    font-size: 55px;
-    margin-top: 30px;
-  	color: #ebaf4c;
-}
-nav .onglets{
-    margin-right: 20px;
-    margin-top: 30px;
-}
-nav .onglets  a{
-  	text-decoration: none;
-  	color: #FFF;
-  	margin-right: 10px;
-	font-size: 25px;
-  	transition: .3s;
-}
-nav .onglets  a:hover{
-	color: #ebaf4c;
-	font-size: 30px;
-    margin-top: 20px;
-    text-decoration: underline;
-}
-nav .onglets .actual{
-  	text-decoration: none;
-  	color: #ebaf4c;
-	font-size: 25px;
-    margin-right: 10px;
-  	transition: .3s;
-}
-nav .onglets .actual:hover{
-	color: #FFF;
-	font-size: 30px;
-    margin-top: 20px;
-    text-decoration: underline;
-}
-
-
-.titleArticles{
-    text-decoration: underline;
-    font-size: 20px;
-}
-
-
-
-.articles{
-	margin-top: 30px;
-}
-.articles .article{
-	display: flex;
-	flex-wrap: wrap;
-	margin-bottom: 30px;
-    margin-left: 12.5%;
-    width: 75%;
-    height: 300px;
-    border-top: 1px solid rgb(129,129,129);
-    border-left: 1px solid rgb(129,129,129);
-    background: rgba(76,106,75,0.3);
-    backdrop-filter: blur(20px);
-    border-radius: 10px;
-}
-.articles .article .left img{
-    margin-top: 25px;
-    margin-left: 25px;
-	height: 250px;
-	width: 250px;
-}
-.articles .article .right{
-	max-width: 50%;
-	margin-left: 40px;
-}
-body .articles .article .right a{
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 25px;
-  transition: .3s;
-}
-body .articles .article .right a:hover{
-    color: #ebaf4c;
-    text-decoration: underline;
-  }
-.articles .article .right p.date{
-	color: #68d065;
-}
-.articles .article .right p.description{
-	color: #fff;
-}
-footer hr{
-    width: 45%;
-}
 
 
 @media only screen and (max-width: 600px){
     body{
         background-image: none;
+    }
+
+    .toggle{
+        visibility: hidden;
     }
 
 
