--- a/rules/style.css
+++ b/rules/style.css
@@ -150,7 +150,7 @@ body .articles .article{
 	margin-bottom: 30px;
     margin-left: 12.5%;
     width: 75%;
-    height: 300px;
+    height: auto;
     border-top: 1px solid rgb(129,129,129);
     border-left: 1px solid rgb(129,129,129);
     background: rgba(32, 32, 32, 0.3);
@@ -163,7 +163,7 @@ body.dark-theme .articles .article{
 	margin-bottom: 30px;
     margin-left: 12.5%;
     width: 75%;
-    height: 300px;
+    height: auto;
     border-top: 1px solid rgb(129, 129, 129);
     border-left: 1px solid rgb(129, 129, 129);
     background: rgba(223, 223, 223, 0.3);
@@ -356,11 +356,6 @@ body.dark-mode footer hr{
     .articles .article{
         margin-bottom: 20px;
         height: auto;
-    }
-    .articles .article .left img{
-        height: 0px;
-        width: 0px;
-        visibility: hidden;
     }
     .articles .article .right{
         max-width: 90%;
