--- a/play/style.css
+++ b/play/style.css
@@ -150,7 +150,7 @@ body .articles .article{
 	margin-bottom: 30px;
     margin-left: 12.5%;
     width: 75%;
-    height: 300px;
+    height: auto;
     border-top: 1px solid rgb(129,129,129);
     border-left: 1px solid rgb(129,129,129);
     background: rgba(32, 32, 32, 0.3);
@@ -163,7 +163,7 @@ body.dark-theme .articles .article{
 	margin-bottom: 30px;
     margin-left: 12.5%;
     width: 75%;
-    height: 300px;
+    height: auto;
     border-top: 1px solid rgb(129, 129, 129);
     border-left: 1px solid rgb(129, 129, 129);
     background: rgba(223, 223, 223, 0.3);
@@ -171,15 +171,8 @@ body.dark-theme .articles .article{
     border-radius: 10px;
 }
 
-.articles .article .left img{
-    margin-top: 25px;
-    margin-left: 25px;
-	height: 250px;
-	width: 250px;
-}
-
 .articles .article .right{
-	max-width: 50%;
+	max-width: 90%;
 	margin-left: 40px;
 }
 
@@ -190,36 +183,11 @@ body .articles .article .right a{
   font-size: 25px;
   transition: .3s;
 }
-body .articles .article .right a{
-    color: #202020;
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 25px;
-    transition: .3s;
-  }y
-
-body .articles .article .right a:hover{
-    color: #ebaf4c;
-    text-decoration: underline;
-}
-body.dark-mode .articles .article .right a:hover{
-    color: #ebaf4c;
-    text-decoration: underline;
+body .articles .article .right h1{
+	font-size: 40px;
 }
 
-body .articles .article .right p.date{
-	color: #d50000;
-}
-body.dark-mode .articles .article .right p.date{
-	color: #d50000;
-}
 
-body .articles .article .right p.description{
-	color: #dfdfdf;
-}
-body.dark-mode .articles .article .right p.description{
-	color: #202020;
-}
 
 body footer hr{
     width: 45%;
@@ -351,30 +319,24 @@ body.dark-mode footer hr{
 
     .articles{
         margin-top: 20px;
+        height: 100%;
     }
     .articles .article{
         margin-bottom: 20px;
-        height: 100%;
-    }
-    .articles .article .left img{
-        margin-top: 10px;
-        margin-left: 10px;
         height: auto;
-        width: 92%;
     }
     .articles .article .right{
-        max-width: 75%;
+        max-width: 90%;
         margin-left: 10px;
     }
     body .articles .article .right a{
       font-size: 25px;
       transition: .3s;
     }
+    body .articles .article .right h1{
+        font-size: 30px;
+    }
     .articles .article .right p.description{
         font-size: 20px;
-    }
-    
-    footer hr{
-        width: 85%;
     }
 }
