--- a/informations/style.css
+++ b/informations/style.css
@@ -174,51 +174,22 @@ body.dark-theme .articles .article{
 .articles .article .left iframe{
     margin-top: 25px;
     margin-left: 25px;
-	height: auto;
+	height: 250px;
 	width: 250px;
 }
 
 .articles .article .right{
 	max-width: 50%;
 	margin-left: 40px;
-}
-
-body .articles .article .right a{
-  color: #dfdfdf;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 25px;
-  transition: .3s;
-}
-body .articles .article .right a{
-    color: #202020;
-    font-weight: bold;
-    text-decoration: none;
     font-size: 25px;
-    transition: .3s;
-  }y
-
-body .articles .article .right a:hover{
-    color: #ebaf4c;
-    text-decoration: underline;
 }
-body.dark-mode .articles .article .right a:hover{
-    color: #ebaf4c;
-    text-decoration: underline;
-}
-
-body .articles .article .right p.date{
-	color: #d50000;
-}
-body.dark-mode .articles .article .right p.date{
-	color: #d50000;
-}
-
 body .articles .article .right p.description{
 	color: #dfdfdf;
+    font-size: 20px;
 }
 body.dark-mode .articles .article .right p.description{
 	color: #202020;
+    font-size: 20px;
 }
 
 body footer hr{
